deploy: 7e5b3bc28461ce4a79976f703a7ca048f29cf836

--- a/genindex.html
+++ b/genindex.html
@@ -875,10 +875,10 @@
 </li>
         <li><a href="cpp_api/apyfixedarray.html#_CPPv4NK13APyFixedArray9frac_bitsEv">APyFixedArray::frac_bits (C++ function)</a>
 </li>
-    </ul></td>
-    <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="cpp_api/apyfixedarray.html#_CPPv4N13APyFixedArray10from_arrayERKN2nb7ndarrayIN2nb8c_contigEEENSt8optionalIiEENSt8optionalIiEENSt8optionalIiEE">APyFixedArray::from_array (C++ function)</a>
 </li>
+    </ul></td>
+    <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="cpp_api/apyfixedarray.html#_CPPv4N13APyFixedArray12from_numbersERKN2nb8sequenceENSt8optionalIiEENSt8optionalIiEENSt8optionalIiEE">APyFixedArray::from_numbers (C++ function)</a>
 </li>
         <li><a href="cpp_api/apyfixedarray.html#_CPPv4N13APyFixedArray8identityERKN2nb4int_ENSt8optionalIiEENSt8optionalIiEENSt8optionalIiEE">APyFixedArray::identity (C++ function)</a>
@@ -1037,6 +1037,8 @@
 </li>
         <li><a href="cpp_api/apyfloat.html#_CPPv4N8APyFloat9ieee_biasENSt7uint8_tE">APyFloat::ieee_bias (C++ function)</a>, <a href="cpp_api/apyfloat.html#_CPPv4NK8APyFloat9ieee_biasEv">[1]</a>
 </li>
+        <li><a href="cpp_api/apyfloat.html#_CPPv4N8APyFloat3infEiiNSt8optionalI5exp_tEE">APyFloat::inf (C++ function)</a>
+</li>
         <li><a href="cpp_api/apyfloat.html#_CPPv4NK8APyFloat9is_finiteEv">APyFloat::is_finite (C++ function)</a>
 </li>
         <li><a href="cpp_api/apyfloat.html#_CPPv4NK8APyFloat12is_identicalERK8APyFloat">APyFloat::is_identical (C++ function)</a>
@@ -1062,6 +1064,8 @@
         <li><a href="cpp_api/apyfloat.html#_CPPv4NK8APyFloat8man_maskEv">APyFloat::man_mask (C++ function)</a>
 </li>
         <li><a href="cpp_api/apyfloat.html#_CPPv4NK8APyFloat12max_exponentEv">APyFloat::max_exponent (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apyfloat.html#_CPPv4N8APyFloat3nanEiiNSt8optionalI5exp_tEE">APyFloat::nan (C++ function)</a>
 </li>
         <li><a href="cpp_api/apyfloat.html#_CPPv4NK8APyFloat9next_downEv">APyFloat::next_down (C++ function)</a>
 </li>
@@ -1837,6 +1841,8 @@
           <li><a href="api/apycfixedarray.html#apytypes.APyCFixedArray.imag">(apytypes.APyCFixedArray property)</a>
 </li>
         </ul></li>
+        <li><a href="api/apyfloat.html#apytypes.APyFloat.inf">inf() (apytypes.APyFloat method)</a>
+</li>
         <li><a href="cpp_api/apyfixed_util.html#_CPPv4I0E32inner_product_func_from_acc_modeNSt8functionIFvN11VECTOR_TYPE14const_iteratorEN11VECTOR_TYPE14const_iteratorEN11VECTOR_TYPE8iteratorENSt6size_tENSt6size_tENSt6size_tENSt6size_tEEEEiiRKNSt8optionalI25APyFixedAccumulatorOptionEE">inner_product_func_from_acc_mode (C++ function)</a>
 </li>
         <li><a href="api/apycfixed.html#apytypes.APyCFixed.int_bits">int_bits (apytypes.APyCFixed property)</a>
@@ -2043,6 +2049,8 @@
   <h2>N</h2>
   <table style="width: 100%" class="indextable genindextable"><tr>
     <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="api/apyfloat.html#apytypes.APyFloat.nan">nan() (apytypes.APyFloat method)</a>
+</li>
         <li><a href="api/apyfloatarray.html#apytypes.APyFloatArray.nancumprod">nancumprod() (apytypes.APyFloatArray method)</a>
 </li>
         <li><a href="api/apyfloatarray.html#apytypes.APyFloatArray.nancumsum">nancumsum() (apytypes.APyFloatArray method)</a>
