deploy: 691e0e16b58335e0849140f12ecbc3d917062eed

--- a/genindex.html
+++ b/genindex.html
@@ -421,8 +421,6 @@
     <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="cpp_api/apytypes_mp.html#_CPPv424apy_addition_same_lengthP10apy_limb_tPK10apy_limb_tPK10apy_limb_tKNSt6size_tE">apy_addition_same_length (C++ function)</a>
 </li>
-        <li><a href="cpp_api/apytypes_mp.html#_CPPv414apy_bitcount_t">apy_bitcount_t (C++ type)</a>
-</li>
         <li><a href="cpp_api/apytypes_mp.html#_CPPv423APY_HALF_LIMB_SIZE_BITS">APY_HALF_LIMB_SIZE_BITS (C++ member)</a>
 </li>
         <li><a href="cpp_api/apytypes_mp.html#c.APY_INLINE">APY_INLINE (C macro)</a>
@@ -447,6 +445,8 @@
 </li>
         <li><a href="cpp_api/apytypes_mp.html#_CPPv435apy_inplace_subtraction_single_limbP10apy_limb_tKNSt6size_tEK10apy_limb_t">apy_inplace_subtraction_single_limb (C++ function)</a>
 </li>
+        <li><a href="cpp_api/apytypes_mp.html#_CPPv414apy_left_shiftP10apy_limb_tPK10apy_limb_tKNSt6size_tEKj">apy_left_shift (C++ function)</a>
+</li>
         <li><a href="cpp_api/apytypes_mp.html#_CPPv418APY_LIMB_MSBWEIGHT">APY_LIMB_MSBWEIGHT (C++ member)</a>
 </li>
         <li><a href="cpp_api/apytypes_mp.html#_CPPv418APY_LIMB_SIZE_BITS">APY_LIMB_SIZE_BITS (C++ member)</a>
@@ -464,6 +464,8 @@
         <li><a href="cpp_api/apytypes_mp.html#_CPPv427apy_subtraction_same_lengthP10apy_limb_tPK10apy_limb_tPK10apy_limb_tKNSt6size_tE">apy_subtraction_same_length (C++ function)</a>
 </li>
         <li><a href="cpp_api/apytypes_mp.html#_CPPv421apy_unsigned_divisionP10apy_limb_tP10apy_limb_tKNSt6size_tEPK10apy_limb_tKNSt6size_tE">apy_unsigned_division (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apytypes_mp.html#_CPPv433apy_unsigned_division_preinvertedP10apy_limb_tP10apy_limb_tKNSt6size_tEPK10apy_limb_tKNSt6size_tEPK13APyDivInverse">apy_unsigned_division_preinverted (C++ function)</a>
 </li>
         <li><a href="cpp_api/apytypes_mp.html#_CPPv427apy_unsigned_multiplicationP10apy_limb_tPK10apy_limb_tKNSt6size_tEPK10apy_limb_tKNSt6size_tE">apy_unsigned_multiplication (C++ function)</a>
 </li>
