deploy: ff904b0c3fc3c5fa7221a223c5451063793140ec

--- a/changelog.html
+++ b/changelog.html
@@ -327,6 +327,7 @@ to infinity or NaN.</p></li>
 <ul class="simple">
 <li><p>Bug in <code class="docutils literal notranslate"><span class="pre">APyFloat</span></code> addition/substraction when the exponent difference was larger
 than 64, introduced in v0.3.0.</p></li>
+<li><p>Bug in <code class="docutils literal notranslate"><span class="pre">from_float</span></code> when creating an <code class="docutils literal notranslate"><span class="pre">APyFloat</span></code> from an <code class="docutils literal notranslate"><span class="pre">APyFixed</span></code>.</p></li>
 <li><p><code class="docutils literal notranslate"><span class="pre">ones_like</span></code> and <code class="docutils literal notranslate"><span class="pre">zeros_like</span></code> now support <code class="docutils literal notranslate"><span class="pre">APyCFixedArray</span></code> input.</p></li>
 </ul>
 </section>
