--- a/genindex.html
+++ b/genindex.html
@@ -795,6 +795,8 @@
 </li>
         <li><a href="cpp_api/apyfixed.html#_CPPv4NK8APyFixed12same_type_asERK8APyFixed">APyFixed::same_type_as (C++ function)</a>
 </li>
+        <li><a href="cpp_api/apyfixed.html#_CPPv4N8APyFixed12set_bit_pow2Eib">APyFixed::set_bit_pow2 (C++ function)</a>
+</li>
         <li><a href="cpp_api/apyfixed.html#_CPPv4N8APyFixed15set_from_stringERKNSt6stringEi">APyFixed::set_from_string (C++ function)</a>
 </li>
         <li><a href="cpp_api/apyfixed.html#_CPPv4N8APyFixed19set_from_string_decERKNSt6stringE">APyFixed::set_from_string_dec (C++ function)</a>
@@ -875,10 +877,10 @@
 </li>
         <li><a href="cpp_api/apyfixedarray.html#_CPPv4N13APyFixedArray3eyeERKN2nb4int_ENSt8optionalIN2nb4int_EEENSt8optionalIiEENSt8optionalIiEENSt8optionalIiEE">APyFixedArray::eye (C++ function)</a>
 </li>
-        <li><a href="cpp_api/apyfixedarray.html#_CPPv4NK13APyFixedArray9frac_bitsEv">APyFixedArray::frac_bits (C++ function)</a>
-</li>
     </ul></td>
     <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="cpp_api/apyfixedarray.html#_CPPv4NK13APyFixedArray9frac_bitsEv">APyFixedArray::frac_bits (C++ function)</a>
+</li>
         <li><a href="cpp_api/apyfixedarray.html#_CPPv4N13APyFixedArray10from_arrayERKN2nb7ndarrayIN2nb8c_contigEEENSt8optionalIiEENSt8optionalIiEENSt8optionalIiEE">APyFixedArray::from_array (C++ function)</a>
 </li>
         <li><a href="cpp_api/apyfixedarray.html#_CPPv4N13APyFixedArray12from_numbersERKN2nb8sequenceENSt8optionalIiEENSt8optionalIiEENSt8optionalIiEE">APyFixedArray::from_numbers (C++ function)</a>
