deploy: bf15c4f158f58bd7f585dea4bca93726132f7efd

--- a/changelog.html
+++ b/changelog.html
@@ -341,6 +341,7 @@ formats.</p></li>
 </ul>
 </li>
 <li><p>Improved type hints for APyArray methods.</p></li>
+<li><p>Bug in <code class="docutils literal notranslate"><span class="pre">APyFixedArray.from_float</span></code> when converting from <code class="docutils literal notranslate"><span class="pre">APyFixed</span></code> (issue #683).</p></li>
 </ul>
 </section>
 <section id="changed">
