--- a/genindex.html
+++ b/genindex.html
@@ -332,8 +332,6 @@
           <li><a href="api/context.html#apytypes.APyFloatQuantizationContext.__init__">(apytypes.APyFloatQuantizationContext method)</a>
 </li>
         </ul></li>
-        <li><a href="cpp_api/apyfixed_util.html#_CPPv4I00E5_castv25RANDOM_ACCESS_ITERATOR_IN25RANDOM_ACCESS_ITERATOR_IN26RANDOM_ACCESS_ITERATOR_OUT26RANDOM_ACCESS_ITERATOR_OUTiiii16QuantizationMode12OverflowMode">_cast (C++ function)</a>
-</li>
         <li><a href="cpp_api/apyfixed_util.html#_CPPv4I00E29_cast_no_quantize_no_overflowv25RANDOM_ACCESS_ITERATOR_IN25RANDOM_ACCESS_ITERATOR_IN26RANDOM_ACCESS_ITERATOR_OUT26RANDOM_ACCESS_ITERATOR_OUTj">_cast_no_quantize_no_overflow (C++ function)</a>, <a href="cpp_api/apyfixed_util.html#_CPPv4I00E29_cast_no_quantize_no_overflowv25RANDOM_ACCESS_ITERATOR_IN26RANDOM_ACCESS_ITERATOR_OUTNSt6size_tENSt6size_tENSt6size_tEj">[1]</a>
 </li>
         <li><a href="cpp_api/apyfloat_util.html#_CPPv415_EXP_LIMIT_BITS">_EXP_LIMIT_BITS (C++ member)</a>
@@ -370,10 +368,10 @@
 </li>
         <li><a href="cpp_api/apyfloat_util.html#_CPPv4N20_FloatingPointAddSub12FINAL_RES_LOE">_FloatingPointAddSub::FINAL_RES_LO (C++ member)</a>
 </li>
-    </ul></td>
-    <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="cpp_api/apyfloat_util.html#_CPPv4N20_FloatingPointAddSub8MAN_MASKE">_FloatingPointAddSub::MAN_MASK (C++ member)</a>
 </li>
+    </ul></td>
+    <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="cpp_api/apyfloat_util.html#_CPPv4N20_FloatingPointAddSub10NORM_CONSTE">_FloatingPointAddSub::NORM_CONST (C++ member)</a>
 </li>
         <li><a href="cpp_api/apyfloat_util.html#_CPPv4NK20_FloatingPointAddSubclEPK12APyFloatDataPK12APyFloatDataP12APyFloatDataNSt6size_tE">_FloatingPointAddSub::operator() (C++ function)</a>, <a href="cpp_api/apyfloat_util.html#_CPPv4NK20_FloatingPointAddSubclERK12APyFloatDataRK12APyFloatDataR12APyFloatData">[1]</a>
@@ -1614,6 +1612,10 @@
   <h2>F</h2>
   <table style="width: 100%" class="indextable genindextable"><tr>
     <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="cpp_api/apyfixed_util.html#_CPPv4I00E16fixed_point_castv25RANDOM_ACCESS_ITERATOR_IN25RANDOM_ACCESS_ITERATOR_IN26RANDOM_ACCESS_ITERATOR_OUT26RANDOM_ACCESS_ITERATOR_OUTiiii16QuantizationMode12OverflowMode">fixed_point_cast (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apyfixed_util.html#_CPPv4I00E23fixed_point_cast_unsafev25RANDOM_ACCESS_ITERATOR_IN25RANDOM_ACCESS_ITERATOR_IN26RANDOM_ACCESS_ITERATOR_OUT26RANDOM_ACCESS_ITERATOR_OUTiiii16QuantizationMode12OverflowMode">fixed_point_cast_unsafe (C++ function)</a>
+</li>
         <li><a href="cpp_api/apyfixed_util.html#_CPPv4I0E23fixed_point_from_doublevd16RANDOM_ACCESS_IT16RANDOM_ACCESS_ITii">fixed_point_from_double (C++ function)</a>
 </li>
         <li><a href="cpp_api/apyfixed_util.html#_CPPv4I0E24fixed_point_from_integervKNSt8uint64_tE16RANDOM_ACCESS_IT16RANDOM_ACCESS_ITii">fixed_point_from_integer (C++ function)</a>
@@ -1706,10 +1708,10 @@
 </li>
         <li><a href="cpp_api/apyfloat_util.html#_CPPv4NK23FloatingPointMultiplierclEPK12APyFloatDataPK12APyFloatDataP12APyFloatDataNSt6size_tE">FloatingPointMultiplier::operator() (C++ function)</a>, <a href="cpp_api/apyfloat_util.html#_CPPv4NK23FloatingPointMultiplierclERK12APyFloatDataRK12APyFloatDataR12APyFloatData">[1]</a>
 </li>
-        <li><a href="cpp_api/apyfloat_util.html#_CPPv4N23FloatingPointMultiplier4qntzE">FloatingPointMultiplier::qntz (C++ member)</a>
-</li>
     </ul></td>
     <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="cpp_api/apyfloat_util.html#_CPPv4N23FloatingPointMultiplier4qntzE">FloatingPointMultiplier::qntz (C++ member)</a>
+</li>
         <li><a href="cpp_api/apyfloat_util.html#_CPPv4N23FloatingPointMultiplier9qntz_funcE">FloatingPointMultiplier::qntz_func (C++ member)</a>
 </li>
         <li><a href="cpp_api/apyfloat_util.html#_CPPv4N23FloatingPointMultiplier11RES_MAX_EXPE">FloatingPointMultiplier::RES_MAX_EXP (C++ member)</a>
