deploy: 15e200501b26fbbc493ddc3115e07342e1b7d4ce

--- a/genindex.html
+++ b/genindex.html
@@ -908,6 +908,8 @@
 </li>
         <li><a href="cpp_api/apyfixed.html#_CPPv4NK8APyFixedleEKd">APyFixed::operator&lt;= (C++ function)</a>, <a href="cpp_api/apyfixed.html#_CPPv4NK8APyFixedleERK8APyFixed">[1]</a>, <a href="cpp_api/apyfixed.html#_CPPv4NK8APyFixedleERKN2nb4int_E">[2]</a>
 </li>
+        <li><a href="cpp_api/apyfixed.html#_CPPv4N8APyFixedaSERK8APyFixed">APyFixed::operator= (C++ function)</a>
+</li>
         <li><a href="cpp_api/apyfixed.html#_CPPv4NK8APyFixedeqEKd">APyFixed::operator== (C++ function)</a>, <a href="cpp_api/apyfixed.html#_CPPv4NK8APyFixedeqERK8APyFixed">[1]</a>, <a href="cpp_api/apyfixed.html#_CPPv4NK8APyFixedeqERKN2nb4int_E">[2]</a>
 </li>
         <li><a href="cpp_api/apyfixed.html#_CPPv4NK8APyFixedgtEKd">APyFixed::operator&gt; (C++ function)</a>, <a href="cpp_api/apyfixed.html#_CPPv4NK8APyFixedgtERK8APyFixed">[1]</a>, <a href="cpp_api/apyfixed.html#_CPPv4NK8APyFixedgtERKN2nb4int_E">[2]</a>
@@ -1010,10 +1012,10 @@
 </li>
         <li><a href="cpp_api/apyfixedarray.html#_CPPv4NK13APyFixedArray7cumprodENSt8optionalIN2nb4int_EEE">APyFixedArray::cumprod (C++ function)</a>
 </li>
-        <li><a href="cpp_api/apyfixedarray.html#_CPPv4NK13APyFixedArray6cumsumENSt8optionalIN2nb4int_EEE">APyFixedArray::cumsum (C++ function)</a>
-</li>
     </ul></td>
     <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="cpp_api/apyfixedarray.html#_CPPv4NK13APyFixedArray6cumsumENSt8optionalIN2nb4int_EEE">APyFixedArray::cumsum (C++ function)</a>
+</li>
         <li><a href="cpp_api/apyfixedarray.html#_CPPv4N13APyFixedArray3eyeERKN2nb4int_ENSt8optionalIN2nb4int_EEENSt8optionalIiEENSt8optionalIiEENSt8optionalIiEE">APyFixedArray::eye (C++ function)</a>
 </li>
         <li><a href="cpp_api/apyfixedarray.html#_CPPv4NK13APyFixedArray9frac_bitsEv">APyFixedArray::frac_bits (C++ function)</a>
