deploy: 87aa9a38a3fb41285d1b341fb9946355d5aad079

--- a/genindex.html
+++ b/genindex.html
@@ -1732,6 +1732,8 @@
 </li>
         <li><a href="cpp_api/apyfixed_util.html#_CPPv4I0E23fixed_point_from_doublevd16RANDOM_ACCESS_IT16RANDOM_ACCESS_ITii">fixed_point_from_double (C++ function)</a>
 </li>
+        <li><a href="cpp_api/apyfixed_util.html#_CPPv435fixed_point_from_double_single_limbdij">fixed_point_from_double_single_limb (C++ function)</a>
+</li>
         <li><a href="cpp_api/apyfixed_util.html#_CPPv4I0E24fixed_point_from_integervKNSt8uint64_tE16RANDOM_ACCESS_IT16RANDOM_ACCESS_ITii">fixed_point_from_integer (C++ function)</a>
 </li>
         <li><a href="cpp_api/apyfixed_util.html#_CPPv4I0E27fixed_point_from_py_integervRKN2nb4int_E16RANDOM_ACCESS_IT16RANDOM_ACCESS_ITii">fixed_point_from_py_integer (C++ function)</a>
@@ -1810,10 +1812,10 @@
 </li>
         <li><a href="cpp_api/apyfloat_util.html#_CPPv4NK25FloatingPointInnerProductclEPK12APyFloatDataPK12APyFloatDataP12APyFloatDataNSt6size_tENSt6size_tENSt6size_tE">FloatingPointInnerProduct::operator() (C++ function)</a>
 </li>
-        <li><a href="cpp_api/apyfloat_util.html#_CPPv4I_NSt6size_tE_NSt6size_tE_NSt6size_tEE23FloatingPointMultiplier">FloatingPointMultiplier (C++ class)</a>
-</li>
     </ul></td>
     <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="cpp_api/apyfloat_util.html#_CPPv4I_NSt6size_tE_NSt6size_tE_NSt6size_tEE23FloatingPointMultiplier">FloatingPointMultiplier (C++ class)</a>
+</li>
         <li><a href="cpp_api/apyfloat_util.html#_CPPv4N23FloatingPointMultiplier12_mul_generalE">FloatingPointMultiplier::_mul_general (C++ member)</a>
 </li>
         <li><a href="cpp_api/apyfloat_util.html#_CPPv4N23FloatingPointMultiplier10_mul_shortE">FloatingPointMultiplier::_mul_short (C++ member)</a>
@@ -2558,7 +2560,7 @@
 </li>
         <li><a href="api/quantizationoverflow.html#apytypes.set_float_quantization_seed">set_float_quantization_seed() (in module apytypes)</a>
 </li>
-        <li><a href="cpp_api/ieee754.html#_CPPv417set_man_of_doubleRd8uint64_t">set_man_of_double (C++ function)</a>
+        <li><a href="cpp_api/ieee754.html#_CPPv417set_man_of_doubleRdNSt8uint64_tE">set_man_of_double (C++ function)</a>
 </li>
         <li><a href="cpp_api/ieee754.html#_CPPv418set_sign_of_doubleRdb">set_sign_of_double (C++ function)</a>
 </li>
@@ -2820,7 +2822,7 @@
 </li>
         <li><a href="cpp_api/ieee754.html#_CPPv427type_pun_double_to_uint64_td">type_pun_double_to_uint64_t (C++ function)</a>
 </li>
-        <li><a href="cpp_api/ieee754.html#_CPPv427type_pun_uint64_t_to_double8uint64_t">type_pun_uint64_t_to_double (C++ function)</a>
+        <li><a href="cpp_api/ieee754.html#_CPPv427type_pun_uint64_t_to_doubleNSt8uint64_tE">type_pun_uint64_t_to_double (C++ function)</a>
 </li>
     </ul></td>
   </tr></table>
