deploy: 22265ada2bb2c7aaac920f532a59a7e8ec325b55

--- a/genindex.html
+++ b/genindex.html
@@ -304,7 +304,7 @@
           
 <section class="genindex-section">
   <h1 id="index">Index</h1>
-  <div class="genindex-jumpbox"><a href="#_"><strong>_</strong></a> | <a href="#A"><strong>A</strong></a> | <a href="#B"><strong>B</strong></a> | <a href="#C"><strong>C</strong></a> | <a href="#D"><strong>D</strong></a> | <a href="#E"><strong>E</strong></a> | <a href="#F"><strong>F</strong></a> | <a href="#G"><strong>G</strong></a> | <a href="#H"><strong>H</strong></a> | <a href="#I"><strong>I</strong></a> | <a href="#J"><strong>J</strong></a> | <a href="#L"><strong>L</strong></a> | <a href="#M"><strong>M</strong></a> | <a href="#N"><strong>N</strong></a> | <a href="#O"><strong>O</strong></a> | <a href="#P"><strong>P</strong></a> | <a href="#Q"><strong>Q</strong></a> | <a href="#R"><strong>R</strong></a> | <a href="#S"><strong>S</strong></a> | <a href="#T"><strong>T</strong></a> | <a href="#U"><strong>U</strong></a> | <a href="#W"><strong>W</strong></a> | <a href="#Z"><strong>Z</strong></a></div>
+  <div class="genindex-jumpbox"><a href="#_"><strong>_</strong></a> | <a href="#A"><strong>A</strong></a> | <a href="#B"><strong>B</strong></a> | <a href="#C"><strong>C</strong></a> | <a href="#D"><strong>D</strong></a> | <a href="#E"><strong>E</strong></a> | <a href="#F"><strong>F</strong></a> | <a href="#G"><strong>G</strong></a> | <a href="#I"><strong>I</strong></a> | <a href="#J"><strong>J</strong></a> | <a href="#L"><strong>L</strong></a> | <a href="#M"><strong>M</strong></a> | <a href="#N"><strong>N</strong></a> | <a href="#O"><strong>O</strong></a> | <a href="#P"><strong>P</strong></a> | <a href="#Q"><strong>Q</strong></a> | <a href="#R"><strong>R</strong></a> | <a href="#S"><strong>S</strong></a> | <a href="#T"><strong>T</strong></a> | <a href="#U"><strong>U</strong></a> | <a href="#W"><strong>W</strong></a> | <a href="#Z"><strong>Z</strong></a></div>
 </section>
 <section id="_" class="genindex-section">
   <h2>_</h2>
@@ -552,10 +552,6 @@
     <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="cpp_api/apytypes_mp.html#_CPPv424apy_addition_same_lengthP10apy_limb_tPK10apy_limb_tPK10apy_limb_tKNSt6size_tE">apy_addition_same_length (C++ function)</a>
 </li>
-        <li><a href="cpp_api/apytypes_mp.html#_CPPv423APY_HALF_LIMB_SIZE_BITS">APY_HALF_LIMB_SIZE_BITS (C++ member)</a>
-</li>
-        <li><a href="cpp_api/apytypes_mp.html#c.APY_INLINE">APY_INLINE (C macro)</a>
-</li>
         <li><a href="cpp_api/apytypes_mp.html#_CPPv423apy_inplace_add_one_lsbP10apy_limb_tKNSt6size_tE">apy_inplace_add_one_lsb (C++ function)</a>
 </li>
         <li><a href="cpp_api/apytypes_mp.html#_CPPv420apy_inplace_additionP10apy_limb_tKNSt6size_tEPK10apy_limb_tKNSt6size_tE">apy_inplace_addition (C++ function)</a>
@@ -578,19 +574,7 @@
 </li>
         <li><a href="cpp_api/apytypes_mp.html#_CPPv414apy_left_shiftP10apy_limb_tPK10apy_limb_tKNSt6size_tEKj">apy_left_shift (C++ function)</a>
 </li>
-        <li><a href="cpp_api/apytypes_mp.html#_CPPv418APY_LIMB_MSBWEIGHT">APY_LIMB_MSBWEIGHT (C++ member)</a>
-</li>
-        <li><a href="cpp_api/apytypes_mp.html#_CPPv418APY_LIMB_SIZE_BITS">APY_LIMB_SIZE_BITS (C++ member)</a>
-</li>
-        <li><a href="cpp_api/apytypes_mp.html#_CPPv419APY_LIMB_SIZE_BYTES">APY_LIMB_SIZE_BYTES (C++ member)</a>
-</li>
-        <li><a href="cpp_api/apytypes_mp.html#_CPPv419APY_LOWER_LIMB_MASK">APY_LOWER_LIMB_MASK (C++ member)</a>
-</li>
         <li><a href="cpp_api/apytypes_mp.html#_CPPv410apy_negateP10apy_limb_tPK10apy_limb_tKNSt6size_tE">apy_negate (C++ function)</a>
-</li>
-        <li><a href="cpp_api/apytypes_mp.html#_CPPv415APY_NUMBER_MASK">APY_NUMBER_MASK (C++ member)</a>
-</li>
-        <li><a href="cpp_api/apytypes_mp.html#_CPPv410apy_size_t">apy_size_t (C++ type)</a>
 </li>
         <li><a href="cpp_api/apytypes_mp.html#_CPPv427apy_subtraction_same_lengthP10apy_limb_tPK10apy_limb_tPK10apy_limb_tKNSt6size_tE">apy_subtraction_same_length (C++ function)</a>
 </li>
@@ -1012,8 +996,6 @@
 </li>
         <li><a href="cpp_api/apyfixedarray.html#_CPPv4NK13APyFixedArray7cumprodENSt8optionalIN2nb4int_EEE">APyFixedArray::cumprod (C++ function)</a>
 </li>
-    </ul></td>
-    <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="cpp_api/apyfixedarray.html#_CPPv4NK13APyFixedArray6cumsumENSt8optionalIN2nb4int_EEE">APyFixedArray::cumsum (C++ function)</a>
 </li>
         <li><a href="cpp_api/apyfixedarray.html#_CPPv4N13APyFixedArray3eyeERKN2nb4int_ENSt8optionalIN2nb4int_EEENSt8optionalIiEENSt8optionalIiEENSt8optionalIiEE">APyFixedArray::eye (C++ function)</a>
@@ -1022,6 +1004,8 @@
 </li>
         <li><a href="cpp_api/apyfixedarray.html#_CPPv4N13APyFixedArray10from_arrayERKN2nb7ndarrayIN2nb8c_contigEEENSt8optionalIiEENSt8optionalIiEENSt8optionalIiEE">APyFixedArray::from_array (C++ function)</a>
 </li>
+    </ul></td>
+    <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="cpp_api/apyfixedarray.html#_CPPv4N13APyFixedArray12from_numbersERKN2nb5typedIN2nb8sequenceEN2nb3anyEEENSt8optionalIiEENSt8optionalIiEENSt8optionalIiEE">APyFixedArray::from_numbers (C++ function)</a>
 </li>
         <li><a href="cpp_api/apyfixedarray.html#_CPPv4N13APyFixedArray8identityERKN2nb4int_ENSt8optionalIiEENSt8optionalIiEENSt8optionalIiEE">APyFixedArray::identity (C++ function)</a>
@@ -1472,8 +1456,6 @@
 </li>
         <li><a href="cpp_api/apytypes_common.html#_CPPv4N27APyFloatQuantizationContext9prev_seedE">APyFloatQuantizationContext::prev_seed (C++ member)</a>
 </li>
-        <li><a href="cpp_api/apytypes_util.html#_CPPv420apytypes_unreachablev">apytypes_unreachable (C++ function)</a>
-</li>
         <li><a href="cpp_api/array_utils.html#_CPPv46arangeRKN2nb6objectERKN2nb6objectERKN2nb6objectE">arange (C++ function)</a>
 </li>
         <li><a href="api/arrayfunctions.html#apytypes.arange">arange() (in module apytypes)</a>
@@ -1502,8 +1484,6 @@
           <li><a href="api/apyfloatarray.html#apytypes.APyFloatArray.bias">(apytypes.APyFloatArray property)</a>
 </li>
         </ul></li>
-        <li><a href="cpp_api/apytypes_util.html#_CPPv4I0E9bit_widthNSt6size_tE8INT_TYPE">bit_width (C++ function)</a>
-</li>
         <li><a href="api/apycfixed.html#apytypes.APyCFixed.bits">bits (apytypes.APyCFixed property)</a>
 
         <ul>
@@ -1525,8 +1505,6 @@
         <li><a href="cpp_api/apytypes_util.html#_CPPv418bits_from_optionalNSt8optionalIiEENSt8optionalIiEENSt8optionalIiEE">bits_from_optional (C++ function)</a>
 </li>
         <li><a href="cpp_api/apytypes_util.html#_CPPv423bits_from_optional_castNSt8optionalIiEENSt8optionalIiEENSt8optionalIiEEii">bits_from_optional_cast (C++ function)</a>
-</li>
-        <li><a href="cpp_api/apytypes_mp.html#_CPPv415BITS_PER_NIBBLE">BITS_PER_NIBBLE (C++ member)</a>
 </li>
         <li><a href="cpp_api/apytypes_util.html#_CPPv413bits_to_limbsNSt6size_tE">bits_to_limbs (C++ function)</a>
 </li>
@@ -1598,10 +1576,10 @@
 </li>
         <li><a href="cpp_api/apyfixed_util.html#_CPPv4I0000E27complex_fixed_point_productv26RANDOM_ACCESS_ITERATOR_IN126RANDOM_ACCESS_ITERATOR_IN226RANDOM_ACCESS_ITERATOR_OUTNSt6size_tENSt6size_tENSt6size_tE28RANDOM_ACCESS_ITERATOR_INOUT28RANDOM_ACCESS_ITERATOR_INOUT28RANDOM_ACCESS_ITERATOR_INOUT">complex_fixed_point_product (C++ function)</a>
 </li>
-        <li><a href="cpp_api/apycfixed_util.html#_CPPv428complex_multiplication_1_1_2P10apy_limb_tPK10apy_limb_tPK10apy_limb_t">complex_multiplication_1_1_2 (C++ function)</a>
-</li>
     </ul></td>
     <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="cpp_api/apycfixed_util.html#_CPPv428complex_multiplication_1_1_2P10apy_limb_tPK10apy_limb_tPK10apy_limb_t">complex_multiplication_1_1_2 (C++ function)</a>
+</li>
         <li><a href="cpp_api/apytypes_common.html#_CPPv414ContextManager">ContextManager (C++ class)</a>
 </li>
         <li><a href="cpp_api/apytypes_common.html#_CPPv4N14ContextManager13enter_contextEv">ContextManager::enter_context (C++ function)</a>
@@ -1626,8 +1604,6 @@
           <li><a href="api/apyfloatarray.html#apytypes.APyFloatArray.copy">(apytypes.APyFloatArray method)</a>
 </li>
         </ul></li>
-        <li><a href="cpp_api/apytypes_util.html#_CPPv4I0E19count_trailing_bitsNSt6size_tE8INT_TYPE">count_trailing_bits (C++ function)</a>
-</li>
         <li><a href="cpp_api/array_utils.html#_CPPv420cpp_axes_from_pythonRKNSt8optionalI14PyShapeParam_tEENSt6size_tE">cpp_axes_from_python (C++ function)</a>
 </li>
         <li><a href="cpp_api/array_utils.html#_CPPv4I0_bE32cpp_shape_from_python_shape_likeNSt6vectorI8INT_TYPEEERK14PyShapeParam_t">cpp_shape_from_python_shape_like (C++ function)</a>
@@ -1690,8 +1666,6 @@
   <h2>E</h2>
   <table style="width: 100%" class="indextable genindextable"><tr>
     <td style="width: 33%; vertical-align: top;"><ul>
-        <li><a href="cpp_api/apytypes_mp.html#_CPPv411endian_test">endian_test (C++ member)</a>
-</li>
         <li><a href="api/apyfloat.html#apytypes.APyFloat.exp">exp (apytypes.APyFloat property)</a>
 </li>
         <li><a href="api/apycfloat.html#apytypes.APyCFloat.exp_bits">exp_bits (apytypes.APyCFloat property)</a>
@@ -1702,10 +1676,10 @@
           <li><a href="api/apyfloatarray.html#apytypes.APyFloatArray.exp_bits">(apytypes.APyFloatArray property)</a>
 </li>
         </ul></li>
-    </ul></td>
-    <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="cpp_api/ieee754.html#_CPPv413exp_of_doubled">exp_of_double (C++ function)</a>
 </li>
+    </ul></td>
+    <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="api/arrayfunctions.html#apytypes.expand_dims">expand_dims() (in module apytypes)</a>
 </li>
         <li><a href="api/apycfixedarray.html#apytypes.APyCFixedArray.eye">eye() (apytypes.APyCFixedArray method)</a>
@@ -1952,16 +1926,6 @@
   </tr></table>
 </section>
 
-<section id="H" class="genindex-section">
-  <h2>H</h2>
-  <table style="width: 100%" class="indextable genindextable"><tr>
-    <td style="width: 33%; vertical-align: top;"><ul>
-        <li><a href="cpp_api/apytypes_mp.html#c.HOST_ENDIAN">HOST_ENDIAN (C macro)</a>
-</li>
-    </ul></td>
-  </tr></table>
-</section>
-
 <section id="I" class="genindex-section">
   <h2>I</h2>
   <table style="width: 100%" class="indextable genindextable"><tr>
@@ -2091,19 +2055,11 @@
         <li><a href="api/apyfixed.html#apytypes.APyFixed.leading_fractional_zeros">leading_fractional_zeros (apytypes.APyFixed property)</a>
 </li>
         <li><a href="api/apyfixed.html#apytypes.APyFixed.leading_ones">leading_ones (apytypes.APyFixed property)</a>
-
-        <ul>
-          <li><a href="cpp_api/apytypes_util.html#_CPPv4I0E12leading_onesNSt6size_tE8INT_TYPE">(C++ function)</a>
 </li>
-        </ul></li>
         <li><a href="api/apyfixed.html#apytypes.APyFixed.leading_signs">leading_signs (apytypes.APyFixed property)</a>
 </li>
         <li><a href="api/apyfixed.html#apytypes.APyFixed.leading_zeros">leading_zeros (apytypes.APyFixed property)</a>
-
-        <ul>
-          <li><a href="cpp_api/apytypes_util.html#_CPPv4I0E13leading_zerosNSt6size_tE8INT_TYPE">(C++ function)</a>
 </li>
-        </ul></li>
         <li><a href="cpp_api/apyfloat_util.html#_CPPv422leading_zeros_apyfixedRK8APyFixed">leading_zeros_apyfixed (C++ function)</a>
 </li>
         <li><a href="cpp_api/python_util.html#_CPPv425limb_vec_from_py_long_vecKNSt6size_tEPK12PyLongObject">limb_vec_from_py_long_vec (C++ function)</a>
@@ -2153,10 +2109,6 @@
         <li><a href="cpp_api/apytypes_util.html#_CPPv4I0E20limb_vector_sub_pow210apy_limb_t22RANDOM_ACCESS_ITERATOR22RANDOM_ACCESS_ITERATORj">limb_vector_sub_pow2 (C++ function)</a>
 </li>
         <li><a href="cpp_api/apytypes_util.html#_CPPv4I0E20limb_vector_test_bitb22RANDOM_ACCESS_ITERATOR22RANDOM_ACCESS_ITERATORj">limb_vector_test_bit (C++ function)</a>
-</li>
-        <li><a href="cpp_api/apytypes_util.html#_CPPv416long_signed_mult10apy_limb_t10apy_limb_t">long_signed_mult (C++ function)</a>
-</li>
-        <li><a href="cpp_api/apytypes_util.html#_CPPv418long_unsigned_mult10apy_limb_t10apy_limb_t">long_unsigned_mult (C++ function)</a>
 </li>
     </ul></td>
   </tr></table>
@@ -2233,8 +2185,6 @@
         <li><a href="api/apyfloat.html#apytypes.APyFloat.next_up">next_up() (apytypes.APyFloat method)</a>
 </li>
         <li><a href="cpp_api/apytypes_util.html#_CPPv4I0E12nibble_widthNSt6size_tE8INT_TYPE">nibble_width (C++ function)</a>
-</li>
-        <li><a href="cpp_api/apytypes_mp.html#_CPPv416NIBBLES_PER_LIMB">NIBBLES_PER_LIMB (C++ member)</a>
 </li>
         <li><a href="cpp_api/apybuffer.html#_CPPv4I0E27NoDefaultConstructAllocator">NoDefaultConstructAllocator (C++ struct)</a>
 </li>
@@ -2318,8 +2268,6 @@
   <h2>P</h2>
   <table style="width: 100%" class="indextable genindextable"><tr>
     <td style="width: 33%; vertical-align: top;"><ul>
-        <li><a href="cpp_api/apytypes_mp.html#c.POSIX_CHAR_BITS">POSIX_CHAR_BITS (C macro)</a>
-</li>
         <li><a href="api/apycfixedarray.html#apytypes.APyCFixedArray.prod">prod() (apytypes.APyCFixedArray method)</a>
 
         <ul>
@@ -2777,8 +2725,6 @@
         <li><a href="api/quantizationoverflow.html#apytypes.QuantizationMode.TO_POS">TO_POS (apytypes.QuantizationMode attribute)</a>
 </li>
         <li><a href="api/quantizationoverflow.html#apytypes.QuantizationMode.TO_ZERO">TO_ZERO (apytypes.QuantizationMode attribute)</a>
-</li>
-        <li><a href="cpp_api/apytypes_util.html#_CPPv4I0E14trailing_zerosNSt6size_tE8INT_TYPE">trailing_zeros (C++ function)</a>
 </li>
         <li><a href="cpp_api/apyfloat_util.html#_CPPv427translate_quantization_mode16QuantizationModeb">translate_quantization_mode (C++ function)</a>
 </li>
