--- a/genindex.html
+++ b/genindex.html
@@ -1004,10 +1004,10 @@
 </li>
         <li><a href="cpp_api/apyfixedarray.html#_CPPv4N13APyFixedArray10from_arrayERKN2nb7ndarrayIN2nb8c_contigEEENSt8optionalIiEENSt8optionalIiEENSt8optionalIiEE">APyFixedArray::from_array (C++ function)</a>
 </li>
-    </ul></td>
-    <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="cpp_api/apyfixedarray.html#_CPPv4N13APyFixedArray12from_numbersERKN2nb5typedIN2nb8sequenceEN2nb3anyEEENSt8optionalIiEENSt8optionalIiEENSt8optionalIiEE">APyFixedArray::from_numbers (C++ function)</a>
 </li>
+    </ul></td>
+    <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="cpp_api/apyfixedarray.html#_CPPv4N13APyFixedArray8identityERKN2nb4int_ENSt8optionalIiEENSt8optionalIiEENSt8optionalIiEE">APyFixedArray::identity (C++ function)</a>
 </li>
         <li><a href="cpp_api/apyfixedarray.html#_CPPv4NK13APyFixedArray8int_bitsEv">APyFixedArray::int_bits (C++ function)</a>
@@ -1459,6 +1459,10 @@
         <li><a href="cpp_api/array_utils.html#_CPPv46arangeRKN2nb6objectERKN2nb6objectERKN2nb6objectE">arange (C++ function)</a>
 </li>
         <li><a href="api/arrayfunctions.html#apytypes.arange">arange() (in module apytypes)</a>
+</li>
+        <li><a href="cpp_api/apyfloat_util.html#_CPPv4I0E25array_floating_point_cast12APyFloatDataRK12APyFloatDataRK12APyFloatSpecRK12APyFloatSpec16QuantizationMode19QNTZ_FUNC_SIGNATUREK5exp_tK5exp_tK5man_tK5man_tKiKiK5man_tK5man_tKNSt7int64_tE">array_floating_point_cast (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apyfloat_util.html#_CPPv434array_floating_point_cast_no_quantRK12APyFloatDataRK12APyFloatSpecK5exp_tK5exp_tKiKNSt7int64_tE">array_floating_point_cast_no_quant (C++ function)</a>
 </li>
     </ul></td>
   </tr></table>
