deploy: 6c45c6e3e0927a14afa79ddbe07ee0120d2a1a04

--- a/genindex.html
+++ b/genindex.html
@@ -348,7 +348,7 @@
 </li>
         <li><a href="cpp_api/apyfloat_util.html#_CPPv4I000E27_floating_point_mul_generalv26RANDOM_ACCESS_ITERATOR_IN126RANDOM_ACCESS_ITERATOR_IN228RANDOM_ACCESS_ITERATOR_INOUTRK12APyFloatSpecRK12APyFloatSpecRK12APyFloatSpecRK16QuantizationModeK5exp_tK5exp_tK5exp_t">_floating_point_mul_general (C++ function)</a>
 </li>
-        <li><a href="cpp_api/apyfloat_util.html#_CPPv4I0000E25_floating_point_mul_shortv26RANDOM_ACCESS_ITERATOR_IN126RANDOM_ACCESS_ITERATOR_IN228RANDOM_ACCESS_ITERATOR_INOUTRK12APyFloatSpecRK12APyFloatSpecRK12APyFloatSpecRK16QuantizationMode19QNTZ_FUNC_SIGNATUREKjK5exp_tK5exp_tK5exp_tK5man_tK5man_tK5man_tK5man_tKiK5man_t">_floating_point_mul_short (C++ function)</a>
+        <li><a href="cpp_api/apyfloat_util.html#_CPPv4I0000E25_floating_point_mul_shortv26RANDOM_ACCESS_ITERATOR_IN126RANDOM_ACCESS_ITERATOR_IN228RANDOM_ACCESS_ITERATOR_INOUTRK12APyFloatSpecRK12APyFloatSpecRK12APyFloatSpecRK16QuantizationMode19QNTZ_FUNC_SIGNATUREKjK5exp_tK5exp_tK5exp_tK5man_tK5man_tK5man_tK5man_tKiK5man_tK7int64_t">_floating_point_mul_short (C++ function)</a>
 </li>
         <li><a href="cpp_api/apyfloat_util.html#_CPPv4I_b_NSt6size_tE_NSt6size_tE_NSt6size_tEE20_FloatingPointAddSub">_FloatingPointAddSub (C++ class)</a>
 </li>
@@ -465,6 +465,8 @@
         <li><a href="cpp_api/apyfloat_util.html#_CPPv429_FloatingPointMultiplierShort">_FloatingPointMultiplierShort (C++ class)</a>
 </li>
         <li><a href="cpp_api/apyfloat_util.html#_CPPv4N29_FloatingPointMultiplierShort29_FloatingPointMultiplierShortERK12APyFloatSpecRK12APyFloatSpecRK12APyFloatSpecRK16QuantizationMode">_FloatingPointMultiplierShort::_FloatingPointMultiplierShort (C++ function)</a>, <a href="cpp_api/apyfloat_util.html#_CPPv4N29_FloatingPointMultiplierShort29_FloatingPointMultiplierShortEv">[1]</a>
+</li>
+        <li><a href="cpp_api/apyfloat_util.html#_CPPv4N29_FloatingPointMultiplierShort9BIAS_TERME">_FloatingPointMultiplierShort::BIAS_TERM (C++ member)</a>
 </li>
         <li><a href="cpp_api/apyfloat_util.html#_CPPv4N29_FloatingPointMultiplierShort8dst_specE">_FloatingPointMultiplierShort::dst_spec (C++ member)</a>
 </li>
@@ -1750,7 +1752,7 @@
 </li>
         <li><a href="cpp_api/apyfloat_util.html#_CPPv436floating_point_less_than_abs_same_wlRK12APyFloatDataRK12APyFloatData">floating_point_less_than_abs_same_wl (C++ function)</a>
 </li>
-        <li><a href="cpp_api/apyfloat_util.html#_CPPv4I_KNSt6size_tE_KNSt6size_tE_KNSt6size_tE000E24floating_point_quotientsv26RANDOM_ACCESS_ITERATOR_IN126RANDOM_ACCESS_ITERATOR_IN228RANDOM_ACCESS_ITERATOR_INOUTRK12APyFloatSpecRK12APyFloatSpecRK12APyFloatSpecKNSt6size_tERK16QuantizationMode">floating_point_quotients (C++ function)</a>
+        <li><a href="cpp_api/apyfloat_util.html#_CPPv4I_KNSt6size_tE_KNSt6size_tE_KNSt6size_tE000E24floating_point_quotientsv26RANDOM_ACCESS_ITERATOR_IN126RANDOM_ACCESS_ITERATOR_IN228RANDOM_ACCESS_ITERATOR_INOUTRK12APyFloatSpecRK12APyFloatSpecRK12APyFloatSpecKNSt6size_tERK16QuantizationModeK5exp_t">floating_point_quotients (C++ function)</a>
 </li>
         <li><a href="cpp_api/apyfloat_util.html#_CPPv4I0E21floating_point_scalbn12APyFloatDataRK12APyFloatDataRK12APyFloatSpeci16QuantizationMode19QNTZ_FUNC_SIGNATURE">floating_point_scalbn (C++ function)</a>
 </li>
@@ -1767,6 +1769,8 @@
         <li><a href="cpp_api/apyfloat_util.html#_CPPv4NK20FloatingPointDividerclEPK12APyFloatDataPK12APyFloatDataP12APyFloatDataNSt6size_tE">FloatingPointDivider::operator() (C++ function)</a>, <a href="cpp_api/apyfloat_util.html#_CPPv4NK20FloatingPointDividerclERK12APyFloatDataRK12APyFloatDataR12APyFloatData">[1]</a>
 </li>
         <li><a href="cpp_api/apyfloat_util.html#_CPPv4N20FloatingPointDivider4qntzE">FloatingPointDivider::qntz (C++ member)</a>
+</li>
+        <li><a href="cpp_api/apyfloat_util.html#_CPPv4N20FloatingPointDivider11RES_MAX_EXPE">FloatingPointDivider::RES_MAX_EXP (C++ member)</a>
 </li>
         <li><a href="cpp_api/apyfloat_util.html#_CPPv4N20FloatingPointDivider9src1_specE">FloatingPointDivider::src1_spec (C++ member)</a>
 </li>
