--- a/genindex.html
+++ b/genindex.html
@@ -1744,6 +1744,8 @@
 </li>
         <li><a href="cpp_api/apyfloat_util.html#_CPPv428floating_point_cast_no_quantRK12APyFloatDataRK12APyFloatSpecRK12APyFloatSpec">floating_point_cast_no_quant (C++ function)</a>
 </li>
+        <li><a href="cpp_api/apyfloat_util.html#_CPPv439floating_point_cast_no_quant_no_max_expRK12APyFloatDataKNSt7uint8_tEKNSt7uint8_tE">floating_point_cast_no_quant_no_max_exp (C++ function)</a>
+</li>
         <li><a href="cpp_api/apyfloat_util.html#_CPPv4I0E31floating_point_from_fixed_point12APyFloatData25RANDOM_ACCESS_ITERATOR_IN25RANDOM_ACCESS_ITERATOR_INiiii5exp_t16QuantizationMode">floating_point_from_fixed_point (C++ function)</a>
 </li>
         <li><a href="cpp_api/apyfloat_util.html#_CPPv424floating_point_less_thanRK12APyFloatDataRK12APyFloatSpecRK12APyFloatDataRK12APyFloatSpec">floating_point_less_than (C++ function)</a>
@@ -1792,10 +1794,10 @@
 </li>
         <li><a href="cpp_api/apyfloat_util.html#_CPPv4N25FloatingPointInnerProduct9mul_shortE">FloatingPointInnerProduct::mul_short (C++ member)</a>
 </li>
-        <li><a href="cpp_api/apyfloat_util.html#_CPPv4NK25FloatingPointInnerProductclEPK12APyFloatDataPK12APyFloatDataP12APyFloatDataNSt6size_tENSt6size_tENSt6size_tE">FloatingPointInnerProduct::operator() (C++ function)</a>
-</li>
     </ul></td>
     <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="cpp_api/apyfloat_util.html#_CPPv4NK25FloatingPointInnerProductclEPK12APyFloatDataPK12APyFloatDataP12APyFloatDataNSt6size_tENSt6size_tENSt6size_tE">FloatingPointInnerProduct::operator() (C++ function)</a>
+</li>
         <li><a href="cpp_api/apyfloat_util.html#_CPPv4I_NSt6size_tE_NSt6size_tE_NSt6size_tEE23FloatingPointMultiplier">FloatingPointMultiplier (C++ class)</a>
 </li>
         <li><a href="cpp_api/apyfloat_util.html#_CPPv4N23FloatingPointMultiplier12_mul_generalE">FloatingPointMultiplier::_mul_general (C++ member)</a>
