deploy: c7e63d9dcbb2e2bd162dbe3387c63e85a3b5c78e

--- a/changelog.html
+++ b/changelog.html
@@ -342,6 +342,7 @@ formats.</p></li>
 </li>
 <li><p>Improved type hints for APyArray methods.</p></li>
 <li><p>Bug in <code class="docutils literal notranslate"><span class="pre">APyFixedArray.from_float</span></code> when converting from <code class="docutils literal notranslate"><span class="pre">APyFixed</span></code> (issue #683).</p></li>
+<li><p>Bug in multi-limb <code class="docutils literal notranslate"><span class="pre">APyFixedArray.max</span></code> and <code class="docutils literal notranslate"><span class="pre">APyFixedArray.min</span></code> (issue #721).</p></li>
 </ul>
 </section>
 <section id="changed">
