--- a/genindex.html
+++ b/genindex.html
@@ -2010,6 +2010,8 @@
           <li><a href="cpp_api/apyfloat_util.html#_CPPv46is_infRK12APyFloatDataNSt7uint8_tE">(C++ function)</a>, <a href="cpp_api/apyfloat_util.html#_CPPv46is_infRK12APyFloatDataRK12APyFloatSpec">[1]</a>
 </li>
         </ul></li>
+        <li><a href="cpp_api/ieee754.html#_CPPv416is_little_endianv">is_little_endian (C++ function)</a>
+</li>
         <li><a href="cpp_api/apyfloat_util.html#_CPPv415is_max_exponentRK12APyFloatDataNSt7uint8_tE">is_max_exponent (C++ function)</a>, <a href="cpp_api/apyfloat_util.html#_CPPv415is_max_exponentRK12APyFloatDataRK12APyFloatSpec">[1]</a>
 </li>
         <li><a href="api/apyfloat.html#apytypes.APyFloat.is_nan">is_nan (apytypes.APyFloat property)</a>
@@ -2402,8 +2404,14 @@
 </li>
         <li><a href="cpp_api/python_util.html#c.REMAINING_BITS_MASK">REMAINING_BITS_MASK (C macro)</a>
 </li>
+        <li><a href="cpp_api/apytypes_util.html#_CPPv4I0E12remove_cvref">remove_cvref (C++ struct)</a>
+</li>
     </ul></td>
     <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="cpp_api/apytypes_util.html#_CPPv4N12remove_cvref4typeE">remove_cvref::type (C++ type)</a>
+</li>
+        <li><a href="cpp_api/apytypes_util.html#_CPPv4I0E14remove_cvref_t">remove_cvref_t (C++ type)</a>
+</li>
         <li><a href="api/apycfixedarray.html#apytypes.APyCFixedArray.reshape">reshape() (apytypes.APyCFixedArray method)</a>
 
         <ul>
@@ -2688,8 +2696,6 @@
           <li><a href="api/apyfloatarray.html#apytypes.APyFloatArray.T">(apytypes.APyFloatArray property)</a>
 </li>
         </ul></li>
-        <li><a href="cpp_api/ieee754.html#_CPPv423target_is_little_endianv">target_is_little_endian (C++ function)</a>
-</li>
         <li><a href="api/quantizationoverflow.html#apytypes.QuantizationMode.TIES_AWAY">TIES_AWAY (apytypes.QuantizationMode attribute)</a>
 </li>
         <li><a href="api/quantizationoverflow.html#apytypes.QuantizationMode.TIES_EVEN">TIES_EVEN (apytypes.QuantizationMode attribute)</a>
@@ -2775,8 +2781,6 @@
         <li><a href="api/apyfloat.html#apytypes.APyFloat.true_sign">true_sign (apytypes.APyFloat property)</a>
 </li>
         <li><a href="cpp_api/apytypes_util.html#_CPPv4I0E21tuple_string_from_vecNSt6stringERKNSt6vectorI1TEE">tuple_string_from_vec (C++ function)</a>
-</li>
-        <li><a href="cpp_api/apytypes_util.html#_CPPv424twos_complement_overflow10apy_limb_ti">twos_complement_overflow (C++ function)</a>
 </li>
         <li><a href="cpp_api/ieee754.html#_CPPv427type_pun_double_to_uint64_td">type_pun_double_to_uint64_t (C++ function)</a>
 </li>
